[UPDATE] Updated correct answer format to prevent content leak on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ a:hover {
 /* Media Queries */
 @media only screen and (max-height: 650px) {
     .container-main {
-        margin-top: 50px;
+        margin-top: 30px;
     }
 }
 @media only screen and (min-width: 1024px) and (orientation: landscape) {
